# esp32-code

baja-dashboard/baja-main-dashboard/main/: gps_handler.h  index.html  main.c  web_server.h  wifi_manager.c  wifi_manager.h
dashboard/: .gitignore  CMakeLists.txt  partitions.csv
dashboard/components/lvgl/: CMakeLists.txt
dashboard/main/: CMakeLists.txt  gps_handler.c  test_dummy_data.js  web_server.c
data-acquisition/main/: main.c
